# EquityAI-Backend

./: .env.example  .gitignore  .gitmodules  data.py  etfs.json  etfs_array.json  fetch_all.sh  main.py  pyproject.toml  readme.MD  save.py
app/: database.py
app/api/: analysis.py  auth.py  dividends.py  portfolio.py  stocks.py
app/models/: database.py
app/services/: dividend_calendar_service.py  stock_sync.py
app/utils/: database.py  synatic_client.py  sync_stocks.py  test_synatic_client.py
scripts/: fetch_category.py
tests/unit/: test_stocks.py
